aperture_sources += files(
  'chromatic_aberration.c',
  'color_grade.c',
  'demosaic.c',
  'denoise.c',
  'exif_writer.c',
  'exposure.c',
  'grain.c',
  'hsl.c',
  'lens_correction.c',
  'lens_match.c',
  'output_transfer.c',
  'profile.c',
  'raw_passthrough.c',
  'registry.c',
  'saturation.c',
  'sharpen.c',
  'tone.c',
  'transform.c',
  'vignette.c',
  'wb.c',
)
