aperture_sources += files(
  'export_batch.c',
  'export_destination.c',
  'export_format.c',
  'export_naming.c',
  'export_presets.c',
  'export_quality.c',
  'library_empty_state.c',
  'library_filter.c',
  'library_groups.c',
  'library_info.c',
  'library_metadata.c',
  'library_pipelines.c',
  'photo_edit.c',
  'photo_keywords.c',
  'photo_metadata.c',
  'panel_table.c',
)
